--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Harish Ghasolia",
   "license": "Apache-2.0",
   "bugs": {
+    "url": "https://github.com/harishghasolia07/universal-currency-converter.git"
   },
   "homepage": "https://github.com/harishghasolia07/universal-currency-converter#readme",
   "dependencies": {
